# romulan

./: Cargo.toml  README.md  amd.md  intel.md
img/: amd_flash_partitioning.drawio  intel_flash_partitioning.drawio
src/: diff_amd.rs  main.rs
src/amd/: flash.rs  mod.rs
src/amd/directory/: bios.rs  mod.rs  psp.rs
src/intel/: mod.rs
