[package]
name = "romulan"
version = "0.1.1"
edition = "2018"
description = "Rust library for parsing a number of firmware images"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://github.com/system76/romulan"

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.5.19", features = ["derive"] }
plain = "0.2.3"
# Right after 0.1.12, the need for Rust nightly was removed, but no release made
redox_uefi = { git = "https://github.com/redox-os/uefi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zerocopy = "0.6.1"

[[bin]]
name = "romulan"
path = "src/main.rs"
