[package]
name = "romulan"
version = "0.1.1"
edition = "2018"
description = "Rust library for parsing a number of firmware images"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Daniel Maslowski <info@orangecms.org>"]
repository = "https://github.com/system76/romulan"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TODO: not yet compatible with stable toolchain
# amd-apcb = { path = "../amd-apcb" }
# me_fs_rs = { path = "../me_fs_rs" }
redox_uefi = "0.1.13"

bitflags = "1.3.2"
plain = "0.2.3"
zerocopy = "0.6.1"

[[bin]]
name = "psp_bin"
path = "src/bin/psp_bin.rs"

[[bin]]
name = "romulan"
path = "src/main.rs"
